# Barber-kombat

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_all_tables.py  0002_add_reports_unique_indexes.py  0003_add_review_request_sent_to_visits.py  0004_pvr_rating_based.py  0005_review_yclients_comment_id.py  0006_visit_confirmed_flag.py  0007_survey_responses.py  0008_admin_call_logs.py  0009_dh_call_tasks.py  0010_telegram_registrations.py  ccd081b239e1_make_telegram_id_nullable_with_partial_.py
backend/app/: cli.py  config.py  database.py  logging.py  main.py  redis.py
backend/app/api/: admin.py  auth.py  config.py  kombat.py  owner.py  plans.py  pvr.py  reports.py  reviews.py  webhooks.py  yclients_helper.py
backend/app/auth/: dependencies.py  jwt.py  telegram.py  webhook.py
backend/tests/: test_admin_calls.py  test_admin_kpi.py  test_async_runner.py  test_auth.py  test_calc_audit.py  test_config_api.py  test_config_service.py  test_dataheroes.py  test_e2e_integration.py  test_kombat_api.py  test_monthly_reset.py  test_notification_tasks.py  test_people.py  test_plans.py  test_plans_api.py  test_pvr.py  test_pvr_api.py  test_rating.py  test_reports.py  test_reports_api.py  test_reviews.py  test_reviews_api.py  test_surveys.py  test_sync_service.py  test_sync_tasks.py  test_telegram_bot.py  test_webhook.py  test_websocket.py  test_whatsapp.py  test_yclients_client.py
(+151 files in other folders)
